syntax = "proto3";

package goods;

option go_package = "github.com/Babushkin05/simple-marketplace/goods-service/api/proto;proto";

service GoodsService {
  rpc CreateAd(CreateAdRequest) returns (AdResponse);
  rpc ListAds(ListAdsRequest) returns (ListAdsResponse);
}

message CreateAdRequest {
  string title = 1;
  string description = 2;
  string image_url = 3;
  double price = 4;
  string token = 5;
}



message AdResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string image_url = 4;
  double price = 5;
  string author_login = 6;
  string created_at = 7;
  bool is_owner = 8;
}

message ListAdsRequest {
  int32 page = 1;
  int32 page_size = 2;

  enum SortField {
    CREATED_AT = 0;
    PRICE = 1;
  }

  enum SortOrder {
    DESC = 0;
    ASC = 1;
  }

  SortField sort_by = 3;
  SortOrder sort_order = 4;

  double price_min = 5;
  double price_max = 6;
    
  string token = 7;
}

message ListAdsResponse {
  repeated AdResponse ads = 1;
  int32 total = 2;
}
